# gambit

./: .all-contributorsrc  .clang-format  .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CITATION.cff  COPYING  ChangeLog  Doxyfile  INSTALL  INSTALL.md  MANIFEST.in  Makefile.am  NEWS  README  README.md  acinclude.m4  config.guess  config.h.in  config.sub  configure.ac  configure.in  depcomp  efg.xbm  egobittest.cc  eliaptest.cc  enumtest.cc  gambit.bib  gambit.desktop  gambit.nsi  gambit.spec  gambit.wxs  gambit.wxs.in  gambitio.cc  gambitio.h  gclfig3.ps  (+36 more)
contrib/games/: 2x2.agg  2x2.nfg  2x2a.nfg  2x2const.nfg  2x2x2-nau.nfg  2x2x2.efg  2x2x2.nfg  2x2x2x2.nfg  2x2x2x2x2.nfg  3x3x3.nfg  4cards.efg  5x4x3.nfg  8x2x2.nfg  8x8.nfg  BSS_S_085.Weighted.agg  Bayesian-Coffee-3-2-2-3.bagg  GenRPS5.agg  Makefile.am  badgame1.efg  badgame2.efg  bayes2a.efg  bhg2.efg  caro2.efg  cent2.nfg  coord2.nfg  coord3.efg  coord3.nfg  coord333.nfg  coord4.nfg  cs.efg  csg1.nfg  csg2.nfg  csg3.nfg  csg4.nfg  deg1.nfg  deg2.nfg  e02.nfg  e04.nfg  e07.nfg  g1.nfg  (+30 more)
efg/: 2s2x2x2.efg  2smp.efg  2x2x2.efg  4cards.efg  Makefile.am  artist1.efg  artist2.efg  badgame1.efg  badgame2.efg  bayes1a.efg  bayes2a.efg  bcp2.efg  bcp3.efg  bcp4.efg  bhg1.efg  bhg2.efg  bhg3.efg  bhg4.efg  bhg5.efg  caro2.efg  cent2.efg  cent3.efg  cent4.efg  cent6.efg  centcs10.efg  centcs6.efg  condjury.efg  coord2.efg  coord2ts.efg  coord3.efg  coord4.efg  cross.efg  cs.efg  e01.efg  e02.efg  e03.efg  e04.efg  e05.efg  e06.efg  e07.efg  (+53 more)
nfg/: 2x2.nfg  2x2a.nfg  2x2const.nfg  2x2x2.nfg  2x2x2x2.nfg  2x2x2x2x2.nfg  3x3x3.nfg  5x4x3.nfg  8x2x2.nfg  8x8.nfg  Makefile.am  coord2.nfg  coord3.nfg  coord333.nfg  coord4.nfg  csg1.nfg  csg2.nfg  csg3.nfg  csg4.nfg  deg1.nfg  deg2.nfg  e01.nfg  e02.nfg  g2.nfg  g3.nfg  loopback.nfg  mixdom.nfg  mixdom2.nfg  oneill.nfg  pd.nfg  perfect1.nfg  perfect2.nfg  perfect3.nfg  poker.nfg  sh3.nfg  stengel.nfg  todd1.nfg  todd2.nfg  todd3.nfg  vd.nfg  (+2 more)
scripts/gcl/: Makefile  Makefile.am  Makefile.in  bhg3.agg  bhg3.efg  chainst.gcl  condjury.gcl  eaotest.gcl  efgtest.gcl  eqreml.gcl  gclini.gcl  holdout.gcl  normal.gcl  nqre.gcl  nqreml.gcl  regress.gcl  replicator.gcl  stdudfs.gcl
sources/: .cvsignore  .gambitrc  Makefile.am  Makefile.generic  Makefile2.generic  accels.cc  accels.h  algdlgs.cc  algdlgs.h  algfunc.cc  algutils.cc  algutils.h  argcargv.c  basis.cc  basis.h  basis.imp  behav.h  behav.imp  behavedit.cc  behavedit.h  behavextend.cc  behavextend.h  behavfilter.cc  behavfilter.h  behavinst.cc  behavsol.cc  behavsol.h  behavsol.imp  bfs.cc  bfs.h  bison.cc  borland.mak  bsolnsf.cc  bsolnsf.h  btableau.cc  btableau.h  btableau.imp  bugs_gcl  bugs_gui  clique.cc  (+722 more)
sources/base/: .cvsignore  Makefile  Makefile.am  base.h  borland.mak  filelist.in  gambit32.mak  garray.cc  garray.h  garray.imp  gblock.cc  gblock.h  gblock.imp  ghash.h  ghash.imp  glist.cc  glist.h  glist.imp  gmap.h  gmap.imp  gmisc.cc  gmisc.h  gnarray.h  gnarray.imp  gnullstatus.h  gpool.cc  gpool.h  gprogres.h  grarray.cc  grarray.h  grarray.imp  grblock.cc  grblock.h  grblock.imp  gsignal.h  gslist.h  gslist.imp  gstack.h  gstack.imp  gstatus.h  (+13 more)
sources/bitmaps/: Makefile.am  add.xbm  add.xpm  delete.xbm  efg.xbm  efg.xpm  efgi.xpm  gambi.xpm  gambit.xbm  gambit.xpm  help.xbm  help.xpm  inspect.xbm  inspect.xpm  makenf.xbm  makenf.xpm  move.xpm  nfg.xbm  nfg.xpm  open.xbm  options.xbm  outcome.xbm  params.xpm  payoff.xbm  print.xbm  save.xbm  save.xpm  scissor.xbm  scissor.xpm  solve.xbm  table.xpm  zoom.xpm  zoomin.xbm  zoomin.xpm  zoomout.xbm  zoomout.xpm
sources/game/: .cvsignore  Makefile.am  actiter.cc  actiter.h  behav.cc  behav.h  behav.imp  behavinst.cc  behavsol.cc  behavsol.h  behavtree.h  behavtree.imp  borland.mak  comlab.cc  efbasis.cc  efbasis.h  efdom.cc  efdom.h  efg.cc  efg.h  efgciter.h  efgcont.cc  efgcont.h  efgensup.cc  efgensup.h  efginst.cc  efgint.h  efgiter.cc  efgiter.h  efgnfg.cc  efgsupport.cc  efgsupport.h  efgutils.cc  efgutils.h  efplayer.h  efstrat.cc  efstrat.h  filelist.in  fullefgoutcome.h  game-behav-mixed.h  (+105 more)
sources/gcl/: Makefile.am  algfunc.cc  borland.mak  command.h  efgfunc.cc  filelist.in  gcl.cc  gclinst.cc  gclstatus.cc  gclstatus.h  gcmdline.cc  gcmdline.h  gcompile.cc  gcompile.yy  gio.cc  gpreproc.cc  gpreproc.h  gsm.cc  gsm.h  gsmconsole.h  gsmfunc.cc  gsmfunc.h  gsmhash.cc  gsmhash.h  gsmincl.cc  gsmincl.h  gsminstr.cc  gsminstr.h  gsmoper.cc  gsmutils.cc  listfunc.cc  nfgfunc.cc  portion.cc  portion.h  solfunc.cc
sources/gel/: exprtree.cc  exprtree.h  funcalg.cc  funcefg.cc  funclist.cc  funcmath.cc  funcmisc.cc  funcmisc.h  funcnfg.cc  funcsol.cc  gel.yy  gelmain.cc  gelmatch.cc  gnlist.cc  gnlist.h  gnlist.imp  gvartbl.cc  gvartbl.h  match.cc  match.h  tristate.h
sources/gui/: .cvsignore  Makefile.am  algdlgs.cc  algdlgs.h  algenummixed.cc  algenummixed.h  algenumpure.cc  algenumpure.h  alglcp.cc  alglcp.h  algliap.cc  algliap.h  alglp.cc  alglp.h  algpolenum.cc  algpolenum.h  algqre.cc  algqre.h  algqregrid.cc  algqregrid.h  algsimpdiv.cc  algsimpdiv.h  analysis.cc  analysis.h  behavedit.cc  behavedit.h  behavfilter.cc  behavfilter.h  borland.mak  corplot.cc  corplot.h  ctrlplay.cc  ctrlplay.h  dcsvg.h  dlabout.cc  dlabout.h  dlactionlabel.h  dlactionprobs.h  dlch.cc  dlch.h  (+215 more)
sources/guishare/: Makefile.am  dlspinctrl.h  fontpanel.cc  fontpanel.h  valinteger.h  valnumber.h  wxmisc.cc  wxmisc.h  wxstatus.h
sources/help/: gamblogo.xbm  gamblogo.xpm  gclman.con  gclman.hhc  gclman.hhk  gclman.hhp  gclman.ref  gclman1.html  gclman10.html  gclman11.html  gclman12.html  gclman13.html  gclman14.html  gclman15.html  gclman16.html  gclman17.html  gclman18.html  gclman19.html  gclman2.html  gclman20.html  gclman21.html  gclman22.html  gclman23.html  gclman24.html  gclman25.html  gclman26.html  gclman27.html  gclman28.html  gclman29.html  gclman3.html  gclman30.html  gclman31.html  gclman32.html  gclman33.html  gclman34.html  (+109 more)
src/: .gitignore  MANIFEST.in  Makefile.am  README.rst  gambit.h  pyproject.toml  setup.py
(+2751 files in other folders)
