##
## This file is part of Gambit
## Copyright (c) 1994-2010, The Gambit Project (http://www.gambit-project.org)
##
## FILE: Makefile.am
## Top-level automake input file for Gambit
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
##

SUBDIRS = contrib

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	gambit.spec \
	gambit.desktop \
	contrib/mac/Info.plist \
	src/labenski/README.txt \
	src/labenski/art/grab.xpm \
	src/labenski/art/hand.xpm \
	src/labenski/art/ledgreen.xpm \
	src/labenski/art/ledgrey.xpm \
	src/labenski/doc/README-plotctrl.txt \
	src/labenski/doc/README-sheet.txt \
	src/labenski/doc/README-wxthings.txt \
	src/labenski/include/wx/wxthings/bitmaps/copy.xpm \
	src/labenski/include/wx/wxthings/bitmaps/cut.xpm \
	src/labenski/include/wx/wxthings/bitmaps/findnext.xpm \
	src/labenski/include/wx/wxthings/bitmaps/find.xpm \
	src/labenski/include/wx/wxthings/bitmaps/grab.xpm \
	src/labenski/include/wx/wxthings/bitmaps/hand.xpm \
	src/labenski/include/wx/wxthings/bitmaps/help.xpm \
	src/labenski/include/wx/wxthings/bitmaps/new.xpm \
	src/labenski/include/wx/wxthings/bitmaps/open.xpm \
	src/labenski/include/wx/wxthings/bitmaps/paste.xpm \
	src/labenski/include/wx/wxthings/bitmaps/preview.xpm \
	src/labenski/include/wx/wxthings/bitmaps/print.xpm \
	src/labenski/include/wx/wxthings/bitmaps/question.xpm \
	src/labenski/include/wx/wxthings/bitmaps/redo.xpm \
	src/labenski/include/wx/wxthings/bitmaps/replace.xpm \
	src/labenski/include/wx/wxthings/bitmaps/saveall.xpm \
	src/labenski/include/wx/wxthings/bitmaps/saveas.xpm \
	src/labenski/include/wx/wxthings/bitmaps/spell.xpm \
	src/labenski/include/wx/wxthings/bitmaps/undo.xpm \
	src/gui/bitmaps/about.xpm \
	src/gui/bitmaps/adddecimal.xpm \
	src/gui/bitmaps/calc.xpm \
	src/gui/bitmaps/close.xpm \
	src/gui/bitmaps/color.xpm \
	src/gui/bitmaps/datasrc.xpm \
	src/gui/bitmaps/deldecimal.xpm \
	src/gui/bitmaps/dice.xpm \
	src/gui/bitmaps/efg.ico \
	src/gui/bitmaps/exit.xpm \
	src/gui/bitmaps/font.xpm \
	src/gui/bitmaps/gambitbig.xpm \
	src/gui/bitmaps/gambit.bmp \
	src/gui/bitmaps/gambit.ico \
	src/gui/bitmaps/gambit.xpm \
	src/gui/bitmaps/label.xpm \
	src/gui/bitmaps/layout.xpm \
	src/gui/bitmaps/move.xpm \
	src/gui/bitmaps/newcol.xpm \
	src/gui/bitmaps/newplayer.xpm \
	src/gui/bitmaps/newrow.xpm \
	src/gui/bitmaps/newtable.xpm \
	src/gui/bitmaps/newtree.xpm \
	src/gui/bitmaps/new.xpm \
	src/gui/bitmaps/next.xpm \
	src/gui/bitmaps/nfg.ico \
	src/gui/bitmaps/open.xpm \
	src/gui/bitmaps/person.xpm \
	src/gui/bitmaps/preview.xpm \
	src/gui/bitmaps/prev.xpm \
	src/gui/bitmaps/print.xpm \
	src/gui/bitmaps/profiles.xpm \
	src/gui/bitmaps/redo.xpm \
	src/gui/bitmaps/saveas.xpm \
	src/gui/bitmaps/savedata.xpm \
	src/gui/bitmaps/save.xpm \
	src/gui/bitmaps/stop.xpm \
	src/gui/bitmaps/table.xpm \
	src/gui/bitmaps/tobegin.xpm \
	src/gui/bitmaps/toend.xpm \
	src/gui/bitmaps/tree.xpm \
	src/gui/bitmaps/undo.xpm \
	src/gui/bitmaps/zoomfit.xpm \
	src/gui/bitmaps/zoomin.xpm \
	src/gui/bitmaps/zoomout.xpm \
	src/gui/bitmaps/zoom1.xpm \
	src/gui/bitmaps/gambitrc.rc \
	contrib/games/2s2x2x2.efg \
	contrib/games/2smp.efg \
	contrib/games/2x2x2.efg \
	contrib/games/4cards.efg \
	contrib/games/artist1.efg \
	contrib/games/artist2.efg \
	contrib/games/badgame1.efg \
	contrib/games/badgame2.efg \
	contrib/games/bayes1a.efg \
	contrib/games/bayes2a.efg \
	contrib/games/bcp2.efg \
	contrib/games/bcp3.efg \
	contrib/games/bcp4.efg \
	contrib/games/bhg1.efg \
	contrib/games/bhg2.efg \
	contrib/games/bhg3.efg \
	contrib/games/bhg4.efg \
	contrib/games/bhg5.efg \
	contrib/games/caro2.efg \
	contrib/games/cent2.efg \
	contrib/games/cent3.efg \
	contrib/games/cent4.efg \
	contrib/games/cent6.efg \
	contrib/games/centcs10.efg \
	contrib/games/centcs6.efg \
	contrib/games/condjury.efg \
	contrib/games/coord2.efg \
	contrib/games/coord2ts.efg \
	contrib/games/coord3.efg \
	contrib/games/coord4.efg \
	contrib/games/cross.efg \
	contrib/games/cs.efg \
	contrib/games/e01.efg \
	contrib/games/e02.efg \
	contrib/games/e03.efg \
	contrib/games/e04.efg \
	contrib/games/e05.efg \
	contrib/games/e06.efg \
	contrib/games/e07.efg \
	contrib/games/e08.efg \
	contrib/games/e09.efg \
	contrib/games/e10a.efg \
	contrib/games/e10.efg \
	contrib/games/e13.efg \
	contrib/games/e16.efg \
	contrib/games/e17.efg \
	contrib/games/e18.efg \
	contrib/games/g1.efg \
	contrib/games/g2.efg \
	contrib/games/g3.efg \
	contrib/games/holdout7.efg \
	contrib/games/holdout.efg \
	contrib/games/hs1.efg \
	contrib/games/jury_mr.efg \
	contrib/games/jury_un.efg \
	contrib/games/km1.efg \
	contrib/games/km2.efg \
	contrib/games/km3.efg \
	contrib/games/km6.efg \
	contrib/games/montyhal.efg \
	contrib/games/my_2-1.efg \
	contrib/games/my_2-4.efg \
	contrib/games/my_2-8.efg \
	contrib/games/my_3-3a.efg \
	contrib/games/my_3-3b.efg \
	contrib/games/my_3-3c.efg \
	contrib/games/my_3-3d.efg \
	contrib/games/my_3-3e.efg \
	contrib/games/my_3-4.efg \
	contrib/games/myerson.efg \
	contrib/games/nim7.efg \
	contrib/games/nim.efg \
	contrib/games/palf2.efg \
	contrib/games/palf3.efg \
	contrib/games/palf.efg \
	contrib/games/poker2.efg \
	contrib/games/poker.efg \
	contrib/games/pvw2.efg \
	contrib/games/pvw.efg \
	contrib/games/sh3.efg \
	contrib/games/sww1.efg \
	contrib/games/sww2.efg \
	contrib/games/sww3.efg \
	contrib/games/tim.efg \
	contrib/games/ttt.efg \
	contrib/games/vd.efg \
	contrib/games/w_ex1.efg \
	contrib/games/w_ex2.efg \
	contrib/games/wilson1.efg \
	contrib/games/work1.efg \
	contrib/games/work2.efg \
	contrib/games/work3.efg \
	contrib/games/2x2a.nfg \
	contrib/games/2x2const.nfg \
	contrib/games/2x2.nfg \
	contrib/games/2x2x2.nfg \
	contrib/games/2x2x2x2.nfg \
	contrib/games/2x2x2x2x2.nfg \
	contrib/games/3x3x3.nfg \
	contrib/games/5x4x3.nfg \
	contrib/games/8x2x2.nfg \
	contrib/games/8x8.nfg \
	contrib/games/cent2.nfg \
	contrib/games/coord2.nfg \
	contrib/games/coord333.nfg \
	contrib/games/coord3.nfg \
	contrib/games/coord4.nfg \
	contrib/games/csg1.nfg \
	contrib/games/csg2.nfg \
	contrib/games/csg3.nfg \
	contrib/games/csg4.nfg \
	contrib/games/deg1.nfg \
	contrib/games/deg2.nfg \
	contrib/games/e01.nfg \
	contrib/games/e02.nfg \
	contrib/games/e04.nfg \
	contrib/games/e07.nfg \
	contrib/games/g1.nfg \
	contrib/games/g2.nfg \
	contrib/games/g3.nfg \
	contrib/games/loopback.nfg \
	contrib/games/mixdom2.nfg \
	contrib/games/mixdom.nfg \
	contrib/games/oneill.nfg \
	contrib/games/pd.nfg \
	contrib/games/perfect1.nfg \
	contrib/games/perfect2.nfg \
	contrib/games/perfect3.nfg \
	contrib/games/poker.nfg \
	contrib/games/sh3.nfg \
	contrib/games/stengel.nfg \
	contrib/games/sww1.nfg \
	contrib/games/todd1.nfg \
	contrib/games/todd2.nfg \
	contrib/games/todd3.nfg \
	contrib/games/vd.nfg \
	contrib/games/wink3.nfg \
	contrib/games/winkels.nfg \
	contrib/games/yamamoto.nfg \
	contrib/games/zero.nfg \
	src/python/setup.py \
	src/python/gambit/__init__.py \
	src/python/gambit/cmdline.py \
	src/python/gambit/enumeration.py \
	src/python/gambit/gameiter.py \
	src/python/gambit/levelk.py \
	src/python/gambit/nash.py \
	src/python/gambit/pctrace.py \
	src/python/gambit/profiles.py \
	src/python/gambit/qre.py \
	src/python/gambit/games/__init__.py \
	src/python/gambit/games/contest.py \
	src/python/gambit/games/meanstat.py \
	src/python/gambit/games/public.py \
	src/python/gambit/lib/__init__.py \
	src/python/gambit/lib/action.pxi \
	src/python/gambit/lib/basegame.pxi \
	src/python/gambit/lib/behav.pxi \
	src/python/gambit/lib/error.py \
	src/python/gambit/lib/game.pxi \
	src/python/gambit/lib/infoset.pxi \
	src/python/gambit/lib/libgambit.cpp \
	src/python/gambit/lib/libgambit.pyx \
	src/python/gambit/lib/mixed.pxi \
	src/python/gambit/lib/node.pxi \
	src/python/gambit/lib/outcome.pxi \
	src/python/gambit/lib/player.pxi \
	src/python/gambit/lib/strategy.pxi \
	src/python/gambit/lib/stratspt.pxi \
	src/python/gambit/lib/util.h \
	src/python/gambit/tests/test_actions.py \
	src/python/gambit/tests/test_behav.py \
	src/python/gambit/tests/test_extensive.py \
	src/python/gambit/tests/test_game.py \
	src/python/gambit/tests/test_infosets.py \
	src/python/gambit/tests/test_mixed.py \
	src/python/gambit/tests/test_node.py \
	src/python/gambit/tests/test_outcomes.py \
	src/python/gambit/tests/test_players.py \
	src/python/gambit/tests/test_strategic.py \
	src/python/gambit/tests/test_strspt.py \
	src/python/gambit/tests/test_stratprofiles.py \
	src/python/gambit/tests/test_strategies.py \
	src/python/gambit/tests/test_games/basic_extensive_game.efg \
	src/python/gambit/tests/test_games/complicated_extensive_game.efg \
	src/python/gambit/tests/test_games/const_sum_game.nfg \
	src/python/gambit/tests/test_games/mixed_behavior_game.efg \
	src/python/gambit/tests/test_games/mixed_strategy.nfg \
	src/python/gambit/tests/test_games/non_const_sum_game.nfg \
	src/python/gambit/tests/test_games/not_perfect_recall.efg \
	src/python/gambit/tests/test_games/payoff_game.nfg \
	src/python/gambit/tests/test_games/perfect_recall.efg


# lib_LTLIBRARIES = libgambit.la

libgambit_la_SOURCES = \
	src/libgambit/integer.cc \
	src/libgambit/integer.h \
	src/libgambit/rational.cc \
	src/libgambit/rational.h \
	src/libgambit/array.h \
	src/libgambit/list.h \
	src/libgambit/vector.cc \
	src/libgambit/vector.h \
	src/libgambit/vector.imp \
	src/libgambit/pvector.cc \
	src/libgambit/pvector.h \
	src/libgambit/pvector.imp \
	src/libgambit/dvector.cc \
	src/libgambit/dvector.h \
	src/libgambit/dvector.imp \
	src/libgambit/recarray.h \
	src/libgambit/matrix.cc \
	src/libgambit/matrix.h \
	src/libgambit/matrix.imp \
	src/libgambit/sqmatrix.cc \
	src/libgambit/sqmatrix.h \
	src/libgambit/sqmatrix.imp \
	src/libgambit/number.h \
	src/libgambit/game.cc \
	src/libgambit/game.h \
	src/libgambit/gametable.cc \
	src/libgambit/gametable.h \
	src/libgambit/gametree.cc \
	src/libgambit/gametree.h \
	src/libgambit/behav.cc \
	src/libgambit/behav.h \
	src/libgambit/behav.imp \
	src/libgambit/behavitr.cc \
	src/libgambit/behavitr.h \
	src/libgambit/behavspt.cc \
	src/libgambit/behavspt.h \
	src/libgambit/mixed.cc \
	src/libgambit/mixed.h \
	src/libgambit/mixed.imp \
	src/libgambit/stratitr.cc \
	src/libgambit/stratitr.h \
	src/libgambit/stratspt.cc \
	src/libgambit/stratspt.h \
	src/libgambit/subgame.cc \
	src/libgambit/subgame.h \
	src/libgambit/file.cc \
	src/libgambit/libgambit.h

libgambitincludedir = $(includedir)/libgambit
libgambitinclude_HEADERS = \
	src/libgambit/integer.h \
	src/libgambit/rational.h \
	src/libgambit/array.h \
	src/libgambit/list.h \
	src/libgambit/vector.h \
	src/libgambit/vector.imp \
	src/libgambit/pvector.h \
	src/libgambit/pvector.imp \
	src/libgambit/dvector.h \
	src/libgambit/dvector.imp \
	src/libgambit/recarray.h \
	src/libgambit/matrix.h \
	src/libgambit/matrix.imp \
	src/libgambit/sqmatrix.h \
	src/libgambit/sqmatrix.imp \
	src/libgambit/number.h \
	src/libgambit/game.h \
	src/libgambit/behav.h \
	src/libgambit/behav.imp \
	src/libgambit/behavitr.h \
	src/libgambit/behavspt.h \
	src/libgambit/mixed.h \
	src/libgambit/mixed.imp \
	src/libgambit/stratitr.h \
	src/libgambit/stratspt.h \
	src/libgambit/libgambit.h

# libgambit_la_LDFLAGS = -no-undefined -version-info 0:0:0


bin_PROGRAMS = \
	gambit-nfg2html \
	gambit-nfg2tex \
	gambit-enummixed

if WITH_ENUMPOLY
bin_PROGRAMS += gambit-enumpoly
endif 

bin_PROGRAMS += \
	gambit-enumpure \
	gambit-gnm \
	gambit-ipa \
	gambit-lcp \
	gambit-liap \
	gambit-logit \
	gambit-nfg-logitdyn \
	gambit-lp \
	gambit-simpdiv

if WITH_GUI
bin_PROGRAMS += gambit
endif

EXTRA_PROGRAMS = gambit-enumpoly gambit

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/labenski/include ${WX_CXXFLAGS}

## Command-line tools

gambit_nfg2html_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/convert/nfg2html.cc

gambit_nfg2tex_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/convert/nfg2tex.cc

liblinear_la_SOURCES = \
	src/liblinear/basis.cc \
	src/liblinear/basis.h \
	src/liblinear/bfs.h \
	src/liblinear/btableau.cc \
	src/liblinear/btableau.h \
	src/liblinear/btableau.imp \
	src/liblinear/lpsolve.cc \
	src/liblinear/lpsolve.h \
	src/liblinear/lpsolve.imp \
	src/liblinear/lptab.cc \
	src/liblinear/lptab.h \
	src/liblinear/lptab.imp \
	src/liblinear/ludecomp.cc \
	src/liblinear/ludecomp.h \
	src/liblinear/ludecomp.imp \
	src/liblinear/tableau.h \
	src/liblinear/tableau.cc

gambit_enummixed_SOURCES = \
	${libgambit_la_SOURCES} \
	${liblinear_la_SOURCES} \
	src/tools/enummixed/lrsmp.h \
	src/tools/enummixed/lrsmp.c \
	src/tools/enummixed/lrslib.h \
	src/tools/enummixed/lrslib.c \
	src/tools/enummixed/lrsnash.cc \
	src/tools/enummixed/vertenum.h \
	src/tools/enummixed/vertenum.imp \
	src/tools/enummixed/clique.cc \
	src/tools/enummixed/clique.h \
	src/tools/enummixed/enummixed.cc


# For enumpoly, sources starting in 'pel' are from Pelican;
# sources from gpartltr to quiksolv were formerly in convenience lib libpoly.
gambit_enumpoly_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/enumpoly/pelclhpk.cc \
	src/tools/enumpoly/pelclhpk.h \
	src/tools/enumpoly/pelclqhl.cc \
	src/tools/enumpoly/pelclqhl.h \
	src/tools/enumpoly/pelclyal.cc \
	src/tools/enumpoly/pelclyal.h \
	src/tools/enumpoly/pelconv.cc \
	src/tools/enumpoly/pelconv.h \
	src/tools/enumpoly/peleval.cc \
	src/tools/enumpoly/peleval.h \
	src/tools/enumpoly/pelgennd.cc \
	src/tools/enumpoly/pelgennd.h \
	src/tools/enumpoly/pelgmatr.cc \
	src/tools/enumpoly/pelgmatr.h \
	src/tools/enumpoly/pelgntyp.h \
	src/tools/enumpoly/pelhomot.cc \
	src/tools/enumpoly/pelhomot.h \
	src/tools/enumpoly/pelpred.cc \
	src/tools/enumpoly/pelpred.h \
	src/tools/enumpoly/pelprgen.cc \
	src/tools/enumpoly/pelprgen.h \
	src/tools/enumpoly/pelproc.cc \
	src/tools/enumpoly/pelproc.h \
	src/tools/enumpoly/pelpscon.h \
	src/tools/enumpoly/pelpsys.cc \
	src/tools/enumpoly/pelpsys.h \
	src/tools/enumpoly/pelqhull.cc \
	src/tools/enumpoly/pelqhull.h \
	src/tools/enumpoly/pelsymbl.cc \
	src/tools/enumpoly/pelsymbl.h \
	src/tools/enumpoly/pelutils.cc \
	src/tools/enumpoly/pelutils.h \
	src/tools/enumpoly/gpartltr.cc \
	src/tools/enumpoly/gpartltr.h \
	src/tools/enumpoly/gpartltr.imp \
	src/tools/enumpoly/gpoly.cc \
	src/tools/enumpoly/gpoly.h \
	src/tools/enumpoly/gpoly.imp \
	src/tools/enumpoly/gpolyctr.h \
	src/tools/enumpoly/gpolylst.cc \
	src/tools/enumpoly/gpolylst.h \
	src/tools/enumpoly/gpolylst.imp \
	src/tools/enumpoly/gsolver.cc \
	src/tools/enumpoly/gsolver.h \
	src/tools/enumpoly/gsolver.imp \
	src/tools/enumpoly/ideal.cc \
	src/tools/enumpoly/ideal.h \
	src/tools/enumpoly/ideal.imp \
	src/tools/enumpoly/ineqsolv.cc \
	src/tools/enumpoly/ineqsolv.h \
	src/tools/enumpoly/ineqsolv.imp \
	src/tools/enumpoly/interval.cc \
	src/tools/enumpoly/interval.h \
	src/tools/enumpoly/interval.imp \
	src/tools/enumpoly/monomial.cc \
	src/tools/enumpoly/monomial.h \
	src/tools/enumpoly/monomial.imp \
	src/tools/enumpoly/pelclass.cc \
	src/tools/enumpoly/pelclass.h \
	src/tools/enumpoly/poly.cc \
	src/tools/enumpoly/poly.h \
	src/tools/enumpoly/poly.imp \
	src/tools/enumpoly/prepoly.cc \
	src/tools/enumpoly/prepoly.h \
	src/tools/enumpoly/quiksolv.cc \
	src/tools/enumpoly/quiksolv.h \
	src/tools/enumpoly/quiksolv.imp \
	src/tools/enumpoly/rectangl.cc \
	src/tools/enumpoly/rectangl.h \
	src/tools/enumpoly/rectangl.imp \
	src/tools/enumpoly/behavextend.cc \
	src/tools/enumpoly/behavextend.h \
	src/tools/enumpoly/complex.cc \
	src/tools/enumpoly/complex.h \
	src/tools/enumpoly/gtree.h \
	src/tools/enumpoly/gtree.imp \
	src/tools/enumpoly/linrcomb.cc \
	src/tools/enumpoly/linrcomb.h \
	src/tools/enumpoly/linrcomb.imp \
	src/tools/enumpoly/efgensup.cc \
	src/tools/enumpoly/efgensup.h \
	src/tools/enumpoly/gnarray.h \
	src/tools/enumpoly/gnarray.imp \
	src/tools/enumpoly/sfg.cc \
	src/tools/enumpoly/sfg.h \
	src/tools/enumpoly/sfstrat.cc \
	src/tools/enumpoly/sfstrat.h \
	src/tools/enumpoly/nfgensup.cc \
	src/tools/enumpoly/nfgensup.h \
	src/tools/enumpoly/odometer.cc \
	src/tools/enumpoly/odometer.h \
	src/tools/enumpoly/nfgcpoly.cc \
	src/tools/enumpoly/nfgcpoly.h \
	src/tools/enumpoly/nfghs.cc \
	src/tools/enumpoly/nfghs.h \
	src/tools/enumpoly/efgpoly.cc \
	src/tools/enumpoly/nfgpoly.cc \
	src/tools/enumpoly/enumpoly.cc

gambit_enumpure_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/enumpure/enumpure.cc

gambit_gnm_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/gt/cmatrix.cc \
	src/tools/gt/cmatrix.h \
	src/tools/gt/gnm.cc \
	src/tools/gt/gnm.h \
	src/tools/gt/gnmgame.cc \
	src/tools/gt/gnmgame.h \
	src/tools/gt/nfgame.cc \
	src/tools/gt/nfgame.h \
	src/tools/gt/nfggnm.cc

gambit_ipa_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/gt/cmatrix.cc \
	src/tools/gt/cmatrix.h \
	src/tools/gt/gnmgame.cc \
	src/tools/gt/gnmgame.h \
	src/tools/gt/ipa.cc \
	src/tools/gt/ipa.h \
	src/tools/gt/nfgame.cc \
	src/tools/gt/nfgame.h \
	src/tools/gt/nfgipa.cc

gambit_lcp_SOURCES = \
	${libgambit_la_SOURCES} \
	${liblinear_la_SOURCES} \
	src/tools/lcp/lemketab.cc \
	src/tools/lcp/lemketab.h \
	src/tools/lcp/lemketab.imp \
	src/tools/lcp/lhtab.cc \
	src/tools/lcp/lhtab.h \
	src/tools/lcp/lhtab.imp \
	src/tools/lcp/efglcp.cc \
	src/tools/lcp/nfglcp.cc \
	src/tools/lcp/lcp.cc

gambit_liap_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/liap/funcmin.cc \
	src/tools/liap/funcmin.h \
	src/tools/liap/efgliap.cc \
	src/tools/liap/nfgliap.cc \
	src/tools/liap/liap.cc

gambit_logit_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/logit/logbehav.h \
	src/tools/logit/logbehav.imp \
	src/tools/logit/path.cc \
	src/tools/logit/path.h \
	src/tools/logit/efglogit.h \
	src/tools/logit/efglogit.cc \
	src/tools/logit/nfglogit.h \
	src/tools/logit/nfglogit.cc \
	src/tools/logit/logit.cc

gambit_nfg_logitdyn_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/logit/nfgdyn.cc


gambit_lp_SOURCES = \
	${libgambit_la_SOURCES} \
	${liblinear_la_SOURCES} \
	src/tools/lp/efglp.cc \
	src/tools/lp/nfglp.cc \
	src/tools/lp/lp.cc


gambit_simpdiv_SOURCES = \
	${libgambit_la_SOURCES} \
	src/tools/simpdiv/nfgsimpdiv.cc


gambit_SOURCES = \
	${libgambit_la_SOURCES} \
	src/labenski/src/sheetatr.cpp \
	src/labenski/src/sheet.cpp \
	src/labenski/src/sheetedg.cpp \
	src/labenski/src/sheetedt.cpp \
	src/labenski/src/sheetren.cpp \
	src/labenski/src/sheetsel.cpp \
	src/labenski/src/sheetspt.cpp \
	src/labenski/src/sheettbl.cpp \
	src/labenski/src/block.cpp \
	src/labenski/src/genergdi.cpp \
	src/labenski/src/geometry.cpp \
	src/labenski/src/menubtn.cpp \
	src/labenski/src/optvalue.cpp \
	src/labenski/src/range.cpp \
	src/labenski/src/spinctld.cpp \
	src/labenski/src/toggle.cpp \
	src/labenski/src/fparser.cpp \
	src/labenski/src/fparser.hh \
	src/labenski/src/fourier.c \
	src/labenski/src/lm_lsqr.cpp \
	src/labenski/src/plotctrl.cpp \
	src/labenski/src/plotcurv.cpp \
	src/labenski/src/plotdata.cpp \
	src/labenski/src/plotdraw.cpp \
	src/labenski/src/plotfunc.cpp \
	src/labenski/src/plotmark.cpp \
	src/labenski/src/plotprnt.cpp \
	src/labenski/include/wx/plotctrl/fourier.h \
	src/labenski/include/wx/plotctrl/fparser.h \
	src/labenski/include/wx/plotctrl/lm_lsqr.h \
	src/labenski/include/wx/plotctrl/plotctrl.h \
	src/labenski/include/wx/plotctrl/plotcurv.h \
	src/labenski/include/wx/plotctrl/plotdata.h \
	src/labenski/include/wx/plotctrl/plotdefs.h \
	src/labenski/include/wx/plotctrl/plotdraw.h \
	src/labenski/include/wx/plotctrl/plotfunc.h \
	src/labenski/include/wx/plotctrl/plotmark.h \
	src/labenski/include/wx/plotctrl/plotprnt.h \
	src/labenski/include/wx/sheet/pairarr.h \
	src/labenski/include/wx/sheet/sheetatr.h \
	src/labenski/include/wx/sheet/sheetdef.h \
	src/labenski/include/wx/sheet/sheetedg.h \
	src/labenski/include/wx/sheet/sheetedt.h \
	src/labenski/include/wx/sheet/sheet.h \
	src/labenski/include/wx/sheet/sheetren.h \
	src/labenski/include/wx/sheet/sheetsel.h \
	src/labenski/include/wx/sheet/sheetspt.h \
	src/labenski/include/wx/sheet/sheettbl.h \
	src/labenski/include/wx/sheet/wx24defs.h \
	src/labenski/include/wx/wxthings/block.h \
	src/labenski/include/wx/wxthings/bmpcombo.h \
	src/labenski/include/wx/wxthings/dropdown.h \
	src/labenski/include/wx/wxthings/genergdi.h \
	src/labenski/include/wx/wxthings/geometry.h \
	src/labenski/include/wx/wxthings/medsort.h \
	src/labenski/include/wx/wxthings/menubtn.h \
	src/labenski/include/wx/wxthings/optvalue.h \
	src/labenski/include/wx/wxthings/range.h \
	src/labenski/include/wx/wxthings/spinctld.h \
	src/labenski/include/wx/wxthings/thingdef.h \
	src/labenski/include/wx/wxthings/toggle.h \
	src/gui/analysis.cc \
	src/gui/analysis.h \
	src/gui/edittext.cc \
	src/gui/edittext.h \
        src/gui/dcsvg.cc \
        src/gui/dcsvg.h \
	src/gui/dlabout.cc \
	src/gui/dlabout.h \
	src/gui/dleditmove.cc \
	src/gui/dleditmove.h \
	src/gui/dleditnode.cc \
	src/gui/dleditnode.h \
	src/gui/dlefglayout.cc \
	src/gui/dlefglayout.h \
	src/gui/dlefglegend.cc \
	src/gui/dlefglegend.h \
	src/gui/dlefglogit.cc \
	src/gui/dlefglogit.h \
	src/gui/dlefgreveal.cc \
	src/gui/dlefgreveal.h \
	src/gui/dlexcept.h \
	src/gui/dlgameprop.cc \
	src/gui/dlgameprop.h \
	src/gui/dlinsertmove.cc \
	src/gui/dlinsertmove.h \
	src/gui/dlnash.cc \
	src/gui/dlnash.h \
	src/gui/dlnashmon.cc \
	src/gui/dlnashmon.h \
	src/gui/dlnfglogit.cc \
	src/gui/efgdisplay.cc \
	src/gui/efgdisplay.h \
	src/gui/efglayout.cc \
	src/gui/efglayout.h \
	src/gui/efgpanel.cc \
	src/gui/efgpanel.h \
	src/gui/efgprofile.cc \
	src/gui/efgprofile.h \
	src/gui/gambit.cc \
	src/gui/gambit.h \
	src/gui/gamedoc.cc \
	src/gui/gamedoc.h \
	src/gui/gameframe.cc \
	src/gui/gameframe.h \
	src/gui/menuconst.h \
	src/gui/nfgpanel.cc \
	src/gui/nfgpanel.h \
	src/gui/nfgprofile.cc \
	src/gui/nfgprofile.h \
	src/gui/nfgtable.cc \
	src/gui/nfgtable.h \
	src/gui/renratio.cc \
	src/gui/renratio.h \
	src/gui/style.cc \
	src/gui/style.h \
	src/gui/valnumber.cc \
	src/gui/valnumber.h \
	src/gui/tinyxml.cc \
	src/gui/tinyxml.h \
	src/gui/tinyxmlerror.cc \
	src/gui/tinyxmlparser.cc


gambit_LDADD = \
        $(RC_OBJECT_PATH) \
	$(WX_LIBS)


osx-bundle:
	make all
	-rm -rf Gambit.app
	-mkdir Gambit.app    
	-mkdir Gambit.app/Contents
	-mkdir Gambit.app/Contents/MacOS
	-mkdir Gambit.app/Contents/Resources
	cp contrib/mac/Info.plist Gambit.app/Contents
	cp contrib/mac/gambit.icns Gambit.app/Contents/Resources/gambit.icns
	echo -n 'APPL????' > Gambit.app/Contents/PkgInfo
	cp gambit Gambit.app/Contents/MacOS/gambit
	cp gambit-* Gambit.app/Contents/MacOS

osx-dmg:  osx-bundle
	-rm -rf .dmg
	-mkdir .dmg
	cp -r Gambit.app .dmg
	hdiutil create Gambit.dmg -volname Gambit -srcfolder .dmg -format UDZO -imagekey zlib-level=9
	rm -rf .dmg
